--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
   google_fonts: ^2.1.0
+  image_downloader: ^0.31.0
 
 
   # The following adds the Cupertino Icons font to your application.
