--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,7 @@ dependencies:
     sdk: flutter
   google_fonts: ^2.1.0
   image_downloader: ^0.31.0
+  get: ^4.6.5
 
 
   # The following adds the Cupertino Icons font to your application.
